test/success/unit/_succ_type_basic_3.hs
x :: Char
main = print "hello"