test/fail/integration/_fail_sem_expr_and_1.hs
x :: Bool
x = 4 && True
main = print "hello"